Fix webtiles whitespace formatting (NormalPerson7, #11632)
Apart from the issues described in the mantis report, this also fixes a
bug where ash bondage info was not displayed on the ^ screen.

(cherry picked from commit d4e5561ac007ed14dd49b4abe3616ba67b6f27de)

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -589,6 +589,7 @@ body {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    white-space: pre;
 }
 .describe-item > .actions {
     margin-top: 15px;
@@ -783,6 +784,9 @@ body {
 }
 .describe-god > body, .describe-god > .body .pane {
     width: 80ch; /* for IE11 */
+}
+.describe-god .body .tbl {
+    white-space: pre;
 }
 
 .formatted-scroller {
